--- a/real-app-example/docker-compose.yml
+++ b/real-app-example/docker-compose.yml
@@ -1,12 +1,16 @@
-# Ojo, Docker Compose no está diseñado para buildear imágenes,
-# por lo que ese proceso aún se puede seguir automatizando a
-# través de NPM scripts. 
+# Nota importante:
+# Docker Compose no está diseñado para buildear imágenes, por
+# lo que ese proceso aún se puede seguir automatizando a
+# través de NPM scripts.
+# 
+# Ver apuntes para complementar información.
 
 # Versión del Docker Compose
 version: "3.8"
 
-# Un servicio ("service") puede contener uno o más
-# contenedores de la misma imagen.
+# Un servicio ("service") puede contener uno o más contenedores de la misma
+# imagen. Esta entidad puede utilizar un dockerfile existente o definir una
+# imagen dentro del bloque mismo.
 services:
 
   # Nombre del contenedor, en este caso "my-db"
@@ -15,19 +19,23 @@ services:
     image: mongo
 
   my-app:
+
     # En lugar de usar una imagen inmutable base de forma directa, Docker
     # puede buildear la imagen cada vez que el Compose se arranque a partir
     # de un contexto en el que se ubique un dockerfile.
     build: . # <-- Pasandole el directorio actual (.) como contexto
+
     # Valores a exportar como variables de entorno
     environment:
       MONGO_URL: "mongodb://my-db:27017/test"
+
     # Le indica a docker que si el contenedor "my-db" no arranca, entonces
     # tampoco arrancar a este contenedor. También le permite establecer un
     # orden de ejecución entre todos los contenedores, arrancando a este
     # contenedor después de "my-db".
     depends_on:
       - my-db
+
     ports:
       - "3000:3000"
       # Al escalar servicios mediante Docker Compose con el flag --scale, será necesario
@@ -37,9 +45,10 @@ services:
       - "3000-3001:3000"
       # En dicho caso, luego habrá que configurar balanceadores de cargas para utilizar ambos servicios
       # en un solo entrypoint.
-    # Montando un volúmen en la imagen para que cada vez que se corra un contenedor
-    # basado en dicha imagen, este escuche y refleje los cambios que ocurren en el directorio
-    # . hacia /usr/src.
+
+    # Montando un volúmen en la imagen para que cada vez que se corra un contenedor basado en
+    # dicha imagen, este escuche y refleje los cambios que ocurren en el directorio actual (.)
+    # hacia /usr/src.
     volumes: 
       - .:/usr/src # <-- Monta el directorio actual (.) en el directorio /usr/src del contenedor
       - /usr/src/node_modules # <-- Ignorar montar el directorio de /node_modules en el volúmen
@@ -47,6 +56,7 @@ services:
       # no hará RUN NPM INSTALL si no detectó cambios recientes al crear la imagen (consulta de caché),
       # y cuando se rebuildee, el caché dirá que no hay cambios cuando en realidad todo el volúmen
       # completo volvió a montarse desde cero.
+
     # Por último, cuando el contenedor detecte que los archivos del directorio /usr/src cambien, entonces
     # el servidor de Express se vuelva a iniciar (nodemon). Para lograr lo anterior, es conveniente
     # configurar un script de NPM que corra a nodemon, y que dicho script corra apenas arranque el
