--- a/real-app-example/package.json
+++ b/real-app-example/package.json
@@ -1,14 +1,14 @@
 {
 
-  "name": "dev-app",
+  "name": "real-app-example",
   "version": "1.0.0",
   "description": "Simple app to handle with docker :)",
   "main": "index.js",
   "scripts": {
     "serve": "nodemon .",
     "start": "node .",
-    "docker:image:build": "docker build -t josegpulido/node:dev-app .",
-    "docker:run:serve": "docker run --rm -p 3000:3000 -v $()/index.js josegpulido/node:dev-app"
+    "docker:image:build": "docker build -t josegpulido/node:real-app-example .",
+    "docker:run:serve": "docker run --rm -p 3000:3000 -v $()/index.js josegpulido/node:real-app-example"
   },
   "author": "José Pulido <memo.board.9999@gmail.com>",
   "license": "ISC",
