--- a/my-first-image/dockerfile
+++ b/my-first-image/dockerfile
@@ -6,12 +6,14 @@
 # una capa nueva en la imagen.
 
 # Todo dockerfile está basada en una imagen de base, como por ejemplo
-# Debian, Red Hat, Ubuntu, etc.
+# Debian, Red Hat, Node, nginx etc.
 FROM ubuntu:latest
 
-# Ejecutando un comando. RUN se ejecuta en tiempo de build, es decir,
-# la imagen se creará con los comandos ya ejecutados.
+# Ejecutando un comando.
 # 
-# En este caso, al arrancar el contenedor se creará un archivo
-# llamado hello-world.txt en el directorio /usr/src
+# RUN se ejecuta en tiempo de build de la imagen, es decir
+# los comandos de shell escritos en esta sentencia se ejecutarán
+# mientras la imagen está siendo construida, y en consecuencia
+# preservará los efectos que tenga dicho comando sobre el sistema
+# operativo a correr, que en este caso es la creación de un achivo.
 RUN touch /usr/src/hello-world.txt
