--- a/multi-stage/package.json
+++ b/multi-stage/package.json
@@ -7,8 +7,8 @@
     "start": "echo \"Running prod mode...\n\" && node .",
     "serve": "echo \"Running dev mode...\n\" && nodemon",
     "test": "echo \"Running tests...\"",
-    "docker:serve": "docker build -t josegpulido/multi-stage:development -f ./docker/development.dockerfile . && docker run --rm --name multi_stage_dev -v multi_stage_dev_vol:/usr/src:rw josegpulido/multi-stage:development && docker logs -f multi_stage_dev",
-    "docker:start": "npm run build && docker build -t josegpulido/multi-stage:production -f ./docker/production.dockerfile . && docker run --rm --name multi_stage_prod -v multi_stage_prod_vol:/usr/src:rw josegpulido/multi-stage:production && docker logs -f multi_stage_prod"
+    "docker:serve": "docker build -t josegpulido/multi-stage:development -f ./docker/development/dockerfile . && docker run --rm --name multi_stage_dev -v $(pwd):/usr/src josegpulido/multi-stage:development",
+    "docker:start": "docker build -t josegpulido/multi-stage:production -f ./docker/production/dockerfile . && docker run --rm --name multi_stage_prod -v $(pwd):/usr/src josegpulido/multi-stage:production"
   },
   "author": "José Guillermo <memo.board.9999@gmail.com>",
   "devDependencies": {
